Update annotation browser styling and add expand/collapse ability Fix checking of favorites when applying save Make save dialog styling similar to annotation browser

--- a/ui/src/css/components/_annotation.scss
+++ b/ui/src/css/components/_annotation.scss
@@ -112,13 +112,24 @@
 
 .annotation__panels {
   flex-shrink: 0;
-  width: 500px;
+  min-width: 500px;
+  max-height: calc(100vh - 150px);
+  overflow-y: auto;
 }
 
 .annotation__panel {
   background-color: $color-charcoal--medium;
   margin-bottom: $spacing-3;
   overflow: hidden;
+}
+
+.annotation_browser_wrapper {
+  background-color: $color-charcoal--medium-dark;
+}
+
+.annotation_browser_header_panel {
+  background-color: $color-charcoal--medium;
+  margin-bottom: $spacing-3;
 }
 
 save-dialog {
@@ -139,6 +150,15 @@ save-dialog {
     transform: scale(1);
   }
 }
+
+.save-dialog-bottom-border {
+  border-bottom: 1px solid $color-charcoal--light;
+}
+
+.save-dialog-attribute-panel {
+  background-color: $color-charcoal--dark;
+}
+
 modify-track-dialog {
   box-sizing: border-box;
   width: 334px;
@@ -171,7 +191,7 @@ modify-track-dialog {
 }
 
 .annotation__panel-border {
-  border: 1px solid $color-charcoal--light;
+  border: 2px solid $color-charcoal--dark;
 }
 
 .annotation__entities {
@@ -261,14 +281,8 @@ favorite-button {
 }
 
 .favorites-panel {
-  border: 1px solid $color-charcoal--medium70;
-  background-color: $color-charcoal--dark;
-}
-
-.entity-panel {
   border: 1px solid $color-charcoal--light;
-  background-color: $color-charcoal--medium-dark;
-  overflow: auto;
+  background-color: $color-charcoal--medium;
 }
 
 .annotation__multi-grid {
@@ -320,10 +334,13 @@ favorite-button {
 }
 
 .annotation__video-player {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
   overflow: hidden;
   margin-bottom: $spacing-3;
   margin-top: $spacing-3;
+  width: 100%;
   &.is-full-screen {
     margin-right: $spacing-3;
 
@@ -475,6 +492,30 @@ annotation-player {
 
 .select-not-allowed {
   cursor: not-allowed;
+}
+
+.annotation-browser-btn {
+  align-items: center;
+  background-color: $color-charcoal--medium-dark;
+  border: 1px #1e2129;
+  border-radius: 3px;
+  color: #a2afcd;
+  cursor: pointer;
+  display: flex;
+  height: 32px;
+  justify-content: center;
+  width: 32px;
+  transition-duration: 0.25s;
+  transition-property: background-color, color;
+}
+.annotation-browser-btn:focus {
+  outline: none;
+}
+.annotation-browser-btn.active,
+.annotation-browser-btn:hover,
+.annotation-browser-btn:focus {
+  background-color: #ffffff;
+  color: #262e3d;
 }
 
 .tab-btn {
